include/monad/fiber/scheduler.h

using std::atomic_int;
typedef struct monad_fiber_scheduler
{
    pthread_t *threads;
    size_t thread_count;
    pthread_mutex_t mutex;
    pthread_cond_t cond;

    monad_fiber_task_queue_t task_queue;
    atomic_int thread_id_source; // if this is zero we're stoppping
} monad_fiber_scheduler_t;
monad_fiber_scheduler_t *monad_fiber_scheduler_current();
void monad_fiber_scheduler_work(monad_fiber_scheduler_t *);
void monad_fiber_scheduler_create(monad_fiber_scheduler_t *, size_t threads);
void monad_fiber_scheduler_destroy(monad_fiber_scheduler_t *);
void monad_fiber_scheduler_stop(monad_fiber_scheduler_t *);
void monad_fiber_scheduler_post(
    monad_fiber_scheduler_t *, monad_fiber_task_t *task, int64_t priority);
// does not yet respect priorities. we should figure out if we need this function first.
void monad_fiber_scheduler_dispatch(
    monad_fiber_scheduler_t *, monad_fiber_task_t *task, int64_t priority);
monad_fiber_task_t *monad_fiber_scheduler_pop_higher_priority_task(
    monad_fiber_scheduler_t *, int64_t priority);
bool monad_fiber_run_one(monad_fiber_scheduler_t *);